--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>Weather</title>
+    
     <link rel="icon" href="/img/weather2.png">
     <link rel="stylesheet" href="./css/styles.css">
     <meta charset="UTF-8">
@@ -11,7 +12,16 @@
     <div class="main-content">
     {{>header}}
     <p>Use this site for weather data!</p>
+
+    <form>
+        <input type="text" placeholder="location">
+        <button>Search</button>
+    </form>
+
+    <p id="message-1"></p>
+    <p id="message-2"></p>
     </div>
     {{>footer}}
+    <script src="/js/app.js"></script>
 </body>
 </html>
