Setting up for heroku

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,10 +11,11 @@
 <body>
     <div class="main-content">
     {{>header}}
-    <p>Use this site for weather data!</p>
+    <p>Use this site for weather data! </p>
+    <p style="font-style: italic; font-size: small">Currently only US cities and a few others are available. </p>
 
     <form>
-        <input type="text" placeholder="location">
+        <input type="text" placeholder="Location">
         <button>Search</button>
     </form>
 
